Initial commit for AWS deployment

--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="https://unpkg.com/html5-qrcode"></script>
-    <script>window.__API_BASE__ = "http://localhost:5000/api";</script>
+    <script>window.__API_BASE__ = "/api";</script>
     <script type="module" src="js/bootstrap.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/auth.js"></script>
